RESOLVED FIXED155496
Position sticky does not work within table cells
https://bugs.webkit.org/show_bug.cgi?id=155496
Summary Position sticky does not work within table cells
Francesco
Reported 2016-03-15 11:02:44 PDT
Created attachment 274104 [details] Test case If you open the attached test case and scroll down, the black box should stick to the top left, and this is how it works in Firefox. In Safari, however, it does not stick. There is also a Stackoverflow post on this, http://stackoverflow.com/questions/28172079/safari-position-sticky-in-table-cell
Attachments
Test case (514 bytes, text/html)
2016-03-15 11:02 PDT, Francesco
no flags
Patch (7.38 KB, patch)
2021-08-23 08:47 PDT, Martin Robinson
no flags
Patch (7.34 KB, patch)
2021-08-25 03:28 PDT, Martin Robinson
no flags
Patch (6.97 KB, patch)
2021-09-08 04:53 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2021-08-19 08:27:25 PDT
This seems to be an issue with the selection of the containing block for calculating sticky constraints.
Martin Robinson
Comment 2 2021-08-23 08:31:12 PDT
*** Bug 188992 has been marked as a duplicate of this bug. ***
Martin Robinson
Comment 3 2021-08-23 08:47:54 PDT
EWS Watchlist
Comment 4 2021-08-23 08:49:07 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
Martin Robinson
Comment 5 2021-08-25 03:28:41 PDT
Martin Robinson
Comment 6 2021-09-08 04:53:33 PDT
EWS
Comment 7 2021-09-09 01:16:31 PDT
Committed r282201 (241488@main): <https://commits.webkit.org/241488@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437618 [details].
Radar WebKit Bug Importer
Comment 8 2021-09-09 01:17:18 PDT
Note You need to log in before you can comment on or make changes to this bug.