Position sticky does not work within table cells https://bugs.webkit.org/show_bug.cgi?id=155496

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-position/sticky/position-sticky-contained-by-display-table-ref.html: Added.
* web-platform-tests/css/css-position/sticky/position-sticky-contained-by-display-table.html: Added.

Source/WebCore:

When computing the content box rect of a sticky container, do not include
intrinsic padding. Instead, use the values computed from CSS. The instrinsic
padding should not limit the movement area of a position:sticky item.

* web-platform-tests/css/css-position/sticky/position-sticky-contained-by-display-table-ref.html: Added.
* web-platform-tests/css/css-position/sticky/position-sticky-contained-by-display-table.html: Added.

Test: imported/w3c/web-platform-tests/css/css-position/sticky/position-sticky-contained-by-display-table.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::computeStickyPositionConstraints const): Use CSS computed
values which do not include intrinsic padding.


Canonical link: https://commits.webkit.org/241488@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282201 268f45cc-cd09-0410-ab3c-d52691b4dbfc